# tML

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: docs-build.yml  docs.yml  installation.yml  macos.yml  pypi.yml  ubuntu.yml  windows.yml
docs/: common.md  contributing.md  index.md  installation.md  tML.md  usage.md
nbooks/: nba_givemesomecredict_agluon.ipynb  pagluon.ipynb  pamljar_gmsc.ipynb
tML/: __init__.py  automl.py  dfops.py  fenginering.py  fselection.py  pagluon.py  pamljar.py  ulogging.py
tests/: __init__.py  test_tML.py
